turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:5: error: missing parameter type for expanded function ((x$1) => ((right) => x$1))
    right => _,
             ^Kerr36:5: error: missing parameter type
    right => _,
    ^